feat: reset password and login validation
