# backend/barter-application/src/main/java/com/barterplatform/application/identity/service/AuthService.java
@@ -1,13 +1,7 @@
 package com.barterplatform.application.identity.service;
 
-import com.barterplatform.api.model.CurrentUserResponse;
-import com.barterplatform.api.model.LoginRequest;
-import com.barterplatform.api.model.MessageResponse;
-import com.barterplatform.api.model.RefreshTokenRequest;
-import com.barterplatform.api.model.RegisterUserRequest;
-import com.barterplatform.api.model.ResendVerificationCodeRequest;
-import com.barterplatform.api.model.TokenResponse;
-import com.barterplatform.api.model.VerifyEmailRequest;
+import com.barterplatform.api.model.*;
+
 import java.util.UUID;
 
 public interface AuthService {
@@ -25,4 +19,8 @@ public interface AuthService {
     MessageResponse verifyEmail(VerifyEmailRequest request);
 
     MessageResponse resendVerificationCode(ResendVerificationCodeRequest request);
+
+    MessageResponse forgotPassword(ForgotPasswordRequest request);
+
+    MessageResponse resetPassword(ResetPasswordRequest request);
 }
